<resources>
    <string name="app_name">Smart Notifier </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Contact Us</string>

    <string name="aboutus">We are the Hyper Squad and this is one of our best product. The motive of our Company is
    to deliver you the quality product with in time and budget.We are here to provide the solutions of all your problems.
        We have the best team to help you in meeting the demands of market.Thank you.
    </string>
    <string name="email">Email: info@hypersquad.com </string>
    <string name="num"> Contact# +923055990605</string>
    <string name="address">Address: Comsats wah campus </string>
    <string name="appinfo">
        This app helps you to automatically send a message to your missed calls.
        These are the steps to Start the app.
    </string>
    <string name="step1">1- Type your message or select one from predefined messages</string>

    <string name="step2">2- Choose whether reply to only contacts or everyone. </string>

    <string name="step3">3- Select whether you want to put phone to silent or not. </string>

    <string name="step4">4- Press start button </string>
    <string name="step5">5- Press Back Button </string>

    <string name="msgoptions">Please type or select predefined message</string>
    <string name="start">Start</string>
    <string name="close">Stop and Close</string>
    <string name="own">Enter your message </string>
    <string name="rtc">Reply to Contacts</string>
    <string name="silent">Silent Mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
