<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_appinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hypersquad.autoreply.appinfo">
    <TextView
        android:id="@+id/txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:fontFamily="bold"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/txtView"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtView3"
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:fontFamily="bold"
        android:textColor="#000000"
        android:layout_below="@+id/txtView2"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/txtView4"
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step3"
        android:fontFamily="bold"
        android:textColor="#000000"
        android:layout_below="@+id/txtView3"
        android:layout_alignParentStart="true" />

    <ImageView
        tools:ignore="ContentDescription"
        android:id="@+id/imageview1"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:background="@drawable/bubbles"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appinfo"
        android:fontFamily="bold"
        android:textColor="#000000"
        android:layout_marginTop="7dp"
        android:layout_alignBottom="@+id/imageview1"
        android:layout_toEndOf="@+id/imageview1"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="7dp" />

    <TextView
        android:text="@string/step4"
        android:fontFamily="bold"
        android:textColor="#000000"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/txtView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/step5"
        android:fontFamily="bold"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3" />

</RelativeLayout>
