<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hypersquad.autoreply.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:onClick="startService1"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="10dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:onClick="stopService1"
        app:srcCompat="@android:drawable/ic_delete"
        android:layout_above="@+id/fab"
        android:layout_alignStart="@+id/fab"
        android:layout_marginBottom="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="#eb4d85"
        android:layout_alignBottom="@+id/fab"
        android:layout_toStartOf="@+id/fab"
        android:layout_marginBottom="@dimen/fab_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/textView"
        android:textColor="#eb4d85"
        android:layout_alignBottom="@+id/fab2"
        android:layout_toStartOf="@+id/fab2"
        android:layout_marginBottom="@dimen/fab_margin"/>

    <TextView
        android:text="@string/msgoptions"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <Switch
        android:id="@+id/silentmode"

        android:text="@string/silent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"

        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/editText2"
        android:padding="5dp"
        android:hint="@string/own"
        android:background="@drawable/border"
        android:layout_height="100dp"
        android:layout_below="@+id/textView2"

        android:layout_alignParentStart="true"
        style="@android:style/Widget.Material.Light.AutoCompleteTextView"
       />

    <Button
        android:text="Predefined Messages"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:layout_marginTop="3dp"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_alignParentEnd="true" />

    <Switch
        android:text="@string/rtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:checked="false"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
